--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -9,10 +9,10 @@ on:
         default:
         type: choice
         options:
-          - run_smoke_tests_in_chrome
-          - run_smoke_tests_in_firefox
-          - run_all_tests_in_chrome
-          - run_all_tests_in_firefox
+          - smoke_tests_in_chrome
+          - smoke_tests_in_firefox
+          - all_tests_in_chrome
+          - all_tests_in_firefox
 
 jobs:
     tests:
@@ -29,15 +29,15 @@ jobs:
           run: sudo apt-get install google-chrome-stable
         - name: Install dependensies
           run: pip install -r requirements.txt
-        - name: run_smoke_tests_in_chrome
-          if: "github.event.inputs.deployment_target == 'run_smoke_tests_in_chrome_ru'" is True
-          run: pytest -sv -m smoke
-        - name: run_smoke_tests_in_firefox
-          if: "github.event.inputs.deployment_target == 'run_smoke_tests_in_firefox_en'" is True
-          run: pytest -sv -m smoke --browser_name=firefox
-        - name: run_all_tests_in_chrome
-          if: "github.event.inputs.deployment_target == 'run_all_tests_in_chrome_es'" is True
-          run: pytest -sv
-        - name: run_all_tests_in_firefox
-          if: "github.event.inputs.deployment_target == 'run_all_tests_in_chrome_es'" is True
-          run: pytest -sv --browser_name=firefox
+        - name: smoke_tests_in_chrome
+          if: "github.event.inputs.deployment_target == 'run_smoke_tests_in_chrome_ru'"
+          run: pytest -s -v -m smoke
+        - name: smoke_tests_in_firefox
+          if: "github.event.inputs.deployment_target == 'run_smoke_tests_in_firefox_en'"
+          run: pytest -s -v -m smoke --browser_name=firefox
+        - name: all_tests_in_chrome
+          if: "github.event.inputs.deployment_target == 'run_all_tests_in_chrome_es'"
+          run: pytest -s -v
+        - name: all_tests_in_firefox
+          if: "github.event.inputs.deployment_target == 'run_all_tests_in_chrome_es'"
+          run: pytest -s -v --browser_name=firefox
