Мелкие правки в github actions

--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -31,13 +31,13 @@ jobs:
           run: pip install -r requirements.txt
         - name: smoke_tests_in_chrome
           if: "github.event.inputs.deployment_target == 'smoke_tests_in_chrome'"
-          run: pytest -s -v -m smoke
+          run: pytest -sv -m smoke
         - name: smoke_tests_in_firefox
           if: "github.event.inputs.deployment_target == 'smoke_tests_in_firefox'"
-          run: pytest -s -v -m smoke --browser_name=firefox
+          run: pytest -sv -m smoke --browser_name=firefox
         - name: all_tests_in_chrome
           if: "github.event.inputs.deployment_target == 'all_tests_in_chrome'"
-          run: pytest -s -v
+          run: pytest -sv
         - name: all_tests_in_firefox
           if: "github.event.inputs.deployment_target == 'all_tests_in_chrome'"
-          run: pytest -s -v --browser_name=firefox
+          run: pytest -sv --browser_name=firefox
